--- a/src/server/views/register.html
+++ b/src/server/views/register.html
@@ -8,9 +8,9 @@
   <div class="container">
 
     <h1>{{ title }}</h1>
-    <p>{{ title }}</p>
+    <p>Welcome to {{ title }}</p>
     <br><br>
-    <form action="/register" method="POST">
+    <form action="/login" method="POST">
       Email:
       <input type="email" name="email" placeholder="Your Email" required autofocus>
       <br>
