Updated routes.js, auth.js and views

--- a/src/server/views/register.html
+++ b/src/server/views/register.html
@@ -10,7 +10,7 @@
     <h1>{{ title }}</h1>
     <p>Welcome to {{ title }}</p>
     <br><br>
-    <form action="/login" method="POST">
+    <form action="/register" method="POST">
       Email:
       <input type="email" name="email" placeholder="Your Email" required autofocus>
       <br>
