--- a/src/server/views/login.html
+++ b/src/server/views/login.html
@@ -10,7 +10,7 @@
     <h1>{{ title }}</h1>
     <p>{{ title }}</p>
     <br><br>
-    <form action="/register" method="POST">
+    <form action="/login" method="POST">
       Email:
       <input type="email" name="email" placeholder="Your Email" required autofocus>
       <br>
