Updated auth.js to use connect-flash

--- a/src/server/views/layout.html
+++ b/src/server/views/layout.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
+
+    {% if message.length %}
+    <div class="container">
+      <p>{{ message[0].message }}</p>
+    </div>
+    {% endif %}
+
     {% block content %}
     {% endblock %}
     <script type="text/javascript" src="//code.jquery.com/jquery-2.1.4.min.js"></script>
